Added needs line for sequential execution

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,7 @@ jobs:
   release:
     name: Release App on Fdroid
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
       
