--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,7 +62,7 @@ jobs:
           echo "${{ secrets.CLOUD_PRIV_KEY }}" | base64 -d - > id
           chmod 400 id
           chmod 600 config.yml
-          sed -i "s|# local_copy_dir:|local_copy_dir: $PWD\/server|" config.yml
+          sed -i "s|# local_copy_dir:|local_copy_dir: $PWD/server/fdroid|" config.yml
       
       - name: Load Artifact
         uses: actions/download-artifact@master
